--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,19 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".addPlayer"
+            android:name=".testSound"
             android:exported="true" />
         <activity
             android:name=".Signup"
             android:exported="true" />
         <activity
-            android:name=".login"
+            android:name=".Login"
             android:exported="true" />
         <activity
             android:name=".FirebaseServices"
-            android:exported="true" />
-        <activity
-            android:name=".firsbaseServecies"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
